2003-10-19  Markus Germeier  <mager@tzi.de>
	* added some missing #ifdef HAVE_USB
	  to libmpio/src/io.c

2003-10-19  Markus Germeier  <mager@tzi.de>
	* added support for the new internal chips
	  found in the new FL100 player
	  (this is supposed to mainly work, but
	   still has some issues)
	* added support for libusb if the kernel
	  module is not available
	  (this needs root privilidges for the moment :-( )

2003-09-23  Markus Germeier  <mager@tzi.de>
	* libmpio/src/io.c (model2externalmem): added FY100 and VP-01 to
	  the list, the external memory of these is now supported.
	  (Thanks to John for providing the information!)
	* libmpio/src/mpio.c (mpio_init_external): 
	  minor change to possibly support card 16MB and below

2003-09-22  Markus Germeier  <mager@tzi.de>
	* added Johns patch to support the VirginPulse
	  VP-01 player. (Thanks!)
	* small fixes to John patch
	* assumed the upcoming VP-02 is a FL100 clone
	  so updated the code accordingly
	* small and dirty hack for '.' in firmware 
	  release numbers
	
2003-08-01  Markus Germeier  <mager@tzi.de>

	* configure.in: bumped version to 0.7.0
	* today is "release day"! :-)

2003-07-27  Andreas Buesching  <crunchy@tzi.de>

	* mpiosh/callback.c (mpiosh_cmd_cd): checking argument.
		NULL is replaced with "."

2003-07-24  Markus Germeier  <mager@tzi.de>
        * detect new SmartMedia chips and report them
	* added version to mpio_smartmedia_t
	* libmpio/src/smartmedia.c (mpio_id2version): 
	  added function
	* spare area read of new chips should work now
	* bumped version to 0.7.0RC2

2003-07-17  Markus Germeier  <mager@tzi.de>
	* libmpio/src/smartmedia.c (mpio_id2mem): 
	  added non-standard SmartMedia chip ID, as reported by Andreas

2003-07-15  Markus Germeier  <mager@tzi.de>
	* libmpio/src/directory.c (mpio_dentry_get_real): 
	  follow up fix for the broken internal FAT fix
	  added FTYPE_BROKEN
	* libmpio/src/directory.c (mpio_directory_make): 
	  another follow up fix for the broken internal FAT fix